--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v1
+            
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Install bun.sh
-      run: curl -sSL https://get.bun.sh | bash
 
     - name: Install dependencies
       run: bun add @aviarytech/ingress @aviarytech/hrgt @tno-terminology-design/mrg-import
