--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       run: bun add @aviarytech/tev2-ingress @aviarytech/tev2-hrgt @tno-terminology-design/mrg-import
 
     - name: Run @aviarytech/tev2-ingress
-      run: bun run @aviarytech/tev2-ingress
+      run: tev2-ingress
 
     - name: Run @tno-terminology-design/mrg-import
       run: bun run @tno-terminology-design/mrg-import
 
     - name: Run @aviarytech/tev2-hrgt
-      run: bun run @aviarytech/tev2-hrgt
+      run: tev2-hrgt
