--- a/saf.yaml
+++ b/saf.yaml
@@ -1,3 +1,4 @@
+scope:
   scopetag: tev2 # identifier that curators have determined for this terminology
   scopedir: https://github.com/aviarytech/tev2-test  # URL of the scope-directory
   curatedir: curated-texts # directory where all curated files are located. Full URL is `scopedir`/`curatedir`
