--- a/saf.yaml
+++ b/saf.yaml
@@ -1,14 +1,19 @@
 scope:
   scopetag: tev2 # identifier that curators have determined for this terminology
-  scopedir: https://github.com/aviarytech/tev2-test  # URL of the scope-directory
+  scopedir: https://github.com/aviarytech/tev2-test # URL of the scope-directory
   curatedir: curated-texts # directory where all curated files are located. Full URL is `scopedir`/`curatedir`
   glossarydir: glossaries # directory where all glossary files and related stuff are located. Full URL is `scopedir`/`glossarydir`
   defaultvsn: latest # vsntag that identifies the default terminology. MRG is located at `scopedir`/`glossarydir`/mrg.`scopetag`.`defaultvsn`.yaml
   license: LICENSE.md # file that contains the (default) licensing conditions. Full URL is `scopedir`/`license`
-  statuses: [ proposed, approved, deprecated ] # list of status tags that are defined for semantic units in this scope
+  statuses: [proposed, approved, deprecated] # list of status tags that are defined for semantic units in this scope
   issues: ttps://github.com/aviarytech/tev2-test/issues # URL where issues can be raised and handled
   curators: # contacting individual curators
   - name: BrianR
     email: # we split up the email address to reduce the likelihood of the address being harvested for spamming
       id: brian
       at: aviary.tech
+scopes: #
+  - scopetag: ctwg # definition of (scope)tag(s) that are used within this scope to refer to a specific terminology
+    scopedir: https://github.com/trustoverip/ctwg # URL of the scope-directory
+versions:
+  - vsntag: test # a versiontag that identifies this version from all other versions in the SAF
