--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.vscode
+wiki
+glossaries
+curated-texts
+
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
