--- a/saf.yaml
+++ b/saf.yaml
@@ -7,12 +7,12 @@ scope:
   license: LICENSE.md # file that contains the (default) licensing conditions. Full URL is `scopedir`/`license`
   statuses: [proposed, approved, deprecated] # list of status tags that are defined for semantic units in this scope
   issues: https://github.com/aviarytech/tev2-test/issues # URL where issues can be raised and handled
-  curators: # contacting individual curators
+  curators:
   - name: BrianR
-    email: # we split up the email address to reduce the likelihood of the address being harvested for spamming
+    email:
       id: brian
       at: aviary.tech
-scopes: #
+scopes: # no imports
 - scopetag: tev2 # definition of (scope) tag(s) that are used within this scope to refer to a specific terminology
 versions:
   - vsntag: latest # a versiontag that identifies this version from all other versions in the SAF
