--- a/saf.yaml
+++ b/saf.yaml
@@ -13,9 +13,13 @@ scope:
       id: brian
       at: aviary.tech
   mrgfile: mrg.tev2.terms.yaml
-  
+  website: https://aviarytech.github.io/tev2-test/
+  navpath: /terms
+scopes:
+- scopetag: tev2-test # definition of (scope) tag(s) that are used within this scope to refer to a specific terminology
+  scopedir: https://github.com/aviarytech/tev2-test/tree/master # URL of the scope-directory
 versions:
   - vsntag: terms # this version contains all terms that are curated within this scope
     altvsntags: [latest] # alternative verstiontags
-    termselcrit:
+    termselection:
       - "*" # import all tev2 terms.
