--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: github-pages
-        path: deploy
+        path: deploy/index.html
 
     # - name: Deploy 🚀
     #   uses: JamesIves/github-pages-deploy-action@v4
